@@ -178,6 +178,15 @@ this repository contains the full copyright notices and license terms. -->
             <field name="module">ir</field>
             <field name="fuzzy" eval="False"/>
         </record>
+        <record model="ir.translation" id="translation_digits_validation_record">
+            <field name="name">digits_validation_record</field>
+            <field name="lang">en_US</field>
+            <field name="type">error</field>
+            <field name="src">The field "%s" on "%s" has too many decimal digits.</field>
+            <field name="value">The field "%s" on "%s" has too many decimal digits.</field>
+            <field name="module">ir</field>
+            <field name="fuzzy" eval="False"/>
+        </record>
         <record model="ir.translation" id="translation_access_error">
             <field name="name">access_error</field>
             <field name="lang">en_US</field>
